--- a/cap2/index.html
+++ b/cap2/index.html
@@ -1,46 +1,51 @@
- <!DOCTYPE html>
- <html>
+ <!DOCTYPE html> 
+ <html lang="pt-BR">
  <head>
+ 	<meta charset="utf-8">
  	<title>O que eu mais gosto em São Paulo</title>
  	<link rel="stylesheet" type="text/css" href="css/normalize.css">
  	<link rel="stylesheet" type="text/css" href="css/meuestilo.css">
  	<script type="text/javascript" src="js/prefixfree.min.js"></script>
  </head>
  <body>
- 	<div class="container">
+ 	<div class="container"> 
 	 	<h1>O que eu mais gosto em São Paulo</h1>
+	 	<div class="place">
+		 	<h2>Passear na Avenida Paulista!</h2>
 
-	 	<h2>Passear na Avenida Paulista!</h2>
+		 	<p>
+		 		Um dos principais centros financeiros da cidade, a avenida Paulista também possui diversas opções de entretenimento. Endereço do Museu de Arte de São Paulo, <em> MASP </em> , do Teatro Gazeta e muitos outros, a região é de fácil acesso graças às diversas linhas de ônibus que cruzam a avenida e à linha de metrô que passa por baixo.
+		 	</p>
 
-	 	<p>
-	 		Um dos principais centros financeiros da cidade, a avenida Paulista também possui diversas opções de entretenimento. Endereço do Museu de Arte de São Paulo, <em> MASP </em> , do Teatro Gazeta e muitos outros, a região é de fácil acesso graças às diversas linhas de ônibus que cruzam a avenida e à linha de metrô que passa por baixo.
-	 	</p>
+		 	<p>
+		 		A Avenida Paulista sempre é assunto. O que será que estão falando a 11 respeito no <a href='https://twitter.com/search/Avenida Paulista' target='_blank'>Twitter</a>?
+		 	</p>
+	 	</div>
 
-	 	<p>
-	 		A Avenida Paulista sempre é assunto. O que será que estão falando a 11 respeito no <a href= 'https://twitter.com/#!/sea rch/Avenida Paulista' 12 target= '_blank' > Twitter </a>?
-	 	</p>
+	 	<div class="place">
+		 	<h2>Os bares da Vila Madalena</h2>
 
-	 	<h2>Os bares da Vila Madalena</h2>
+		 	<p>
+		 		Depois de um dia de trabalho, nada melhor do que um bom chopp, um petisco e uma conversa em uma mesa de bar. Opções de sobra na região das ruas Aspicuelta, Fradique Coutinho e Wisard.
+		 	</p>
 
-	 	<p>
-	 		Depois de um dia de trabalho, nada melhor do que um bom chopp, um petisco e uma conversa em uma mesa de bar. Opções de sobra na região das ruas Aspicuelta, Fradique Coutinho e Wisard.
-	 	</p>
+		 	<p>
+		 		Veja quais os melhores bares e restaurantes da região no <a href='http://bit.ly/bares-vila' target='_blank'>Guia da VEJA São Paulo.</a>
+		 	</p>
+	 	</div>
 
-	 	<p>
-	 		Veja quais os melhores bares e restaurantes da região no <a href= 'http://vejasp.abril.com.br/busca?chn=bares&qu=&nbh=Pinheiros%20/%20Vila%20Madalena' target= '_blank'>11 Guia da VEJA São Paulo. 12</a>
-	 	</p>
+	 	<div class="place">
+		 	<h2> O Parque do Ibirapuera </h2>
 
-	 	<h2> O Parque do Ibirapuera </h2>
+		 	<p>
+		 		Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km² de área verde, lagos artificiais e pistas de cooper e ciclismo. E se isso não fosse o suficiente, o parque costuma ser palco de diversos eventos culturais ao longo do ano.
+		 	</p>
 
-	 	<p>
-	 		Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km² de área verde, lagos artificiais e pistas de cooper e ciclismo. E se isso não fosse o suficiente, o parque costuma ser palco de diversos eventos culturais ao longo do ano.
-	 	</p>
-
-	 	<p>
-	 		Veja no <a href= 'http://goo.gl/maps/HoH8' target= '_blank' >mapa </a> como chegar ao parque.
-	 	</p>
-
-	 	<script type="text/javascript" src="js/jquery.min.js"></script>
+		 	<p>
+		 		Veja no <a href= 'http://goo.gl/maps/HoH8' target= '_blank' >mapa </a> como chegar ao parque.
+		 	</p>
+	 	</div>	 	
  	</div>
+ 	<script type="text/javascript" src="js/jquery.min.js"></script>
  </body>
  </html>
